--- a/charts/heqet/projects/downloader/values/youtubedl.yaml
+++ b/charts/heqet/projects/downloader/values/youtubedl.yaml
@@ -4,6 +4,14 @@ ingress:
     annotations:
       cert-manager.io/cluster-issuer: "vault-issuer"
       kubernetes.io/ingress.class: "nginx"
+      nginx.ingress.kubernetes.io/auth-url: |
+        https://youtubedl.dc/akprox/auth/nginx
+      nginx.ingress.kubernetes.io/auth-signin: |
+        https://youtubedl.dc/akprox/start?rd=$escaped_request_uri
+      nginx.ingress.kubernetes.io/auth-response-headers: |
+        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
+      nginx.ingress.kubernetes.io/auth-snippet: |
+         proxy_set_header X-Forwarded-Host $http_host;
     hosts:
       - host: youtubedl.dc
         paths:
