Feature(argocd): authentik oauth

--- a/charts/heqet/projects/argocd/project.yml
+++ b/charts/heqet/projects/argocd/project.yml
@@ -13,3 +13,6 @@ apps:
         - admin.password
         - server.secretkey
         - oidc.auth0.clientSecret
+    - name: ca-cert
+      keys:
+        - ca
