Fix(drone-runner): runasroot :(

--- a/charts/heqet/projects/drone/values/drone-runner.yaml
+++ b/charts/heqet/projects/drone/values/drone-runner.yaml
@@ -1,13 +1,13 @@
-podSecurityContext:
-  fsGroup: 2000
+#podSecurityContext:
+#  fsGroup: 2000
 
-securityContext:
-  capabilities:
-    drop:
-    - ALL
-  readOnlyRootFilesystem: true
-  runAsNonRoot: true
-  runAsUser: 1000
+#securityContext:
+  #capabilities:
+  #  drop:
+  #  - ALL
+  #readOnlyRootFilesystem: true
+  #runAsNonRoot: false
+  #runAsUser: 1000
 
 resources:
   limits:
